--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
+@import url("styles/carrossel.css");
 :root {
   --cor-de-fundo: #ebecee;
   --branco: #ffffff;
@@ -9,7 +10,7 @@
 }
 
 body {
-  background-color: var(--azul-degrade);
+  background-color: var(--cor-de-fundo);
   font-family: var(--fonte-principal);
   font-size: 16px;
   font-weight: 400;
