--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@
   --branco: #ffffff;
   --laranja: #eb9b00;
   --azul:#002F52;
-  --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  --preto:#000000;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins", sans-serif;
+  --fonte-secundaria:"Josefin Sans";
 }
 
 body {
