feat:media queries tablet (1024px)

--- a/styles/header.css
+++ b/styles/header.css
@@ -85,4 +85,11 @@
   .cabeçalho__menu-hamburguer{
     display: none;
   }
+  .opções__botao:checked ~ .lista-menu{
+    display: block;
+    width: auto;
+  }
+  .opções__botao{
+    display: none;
+  }
 }
