--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
 @import url("styles/topicos.css");
 @import url("styles/contato.css");
 @import url("styles/rodape.css");
+
 :root {
   --cor-de-fundo: #ebecee;
   --branco: #ffffff;
   --laranja: #eb9b00;
-  --azul:#002F52;
-  --preto:#000000;
-    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  --azul: #002F52;
+  --preto: #000000;
+  --cinza: #474646;
+  --cinza-titulo:#858585;
+  --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins", sans-serif;
-  --fonte-secundaria:"Josefin Sans";
+  --fonte-secundaria: "Josefin Sans";
 }
 
 body {
