--- a/styles/banner.css
+++ b/styles/banner.css
@@ -29,3 +29,16 @@
   background: url("../img/lupa.svg") no-repeat;
   background-position: 1em;
 }
+
+@media screen and (min-width: 1024px){
+  .banner__titulo{
+    font-size:2.25rem; 
+  } 
+  .banner__pesquisa{
+    width: 50%;
+  }
+  .banner__pesquisa::placeholder{
+    background-position: 4em;
+    font-size: 1rem;
+  }
+}
