--- a/styles/contato.css
+++ b/styles/contato.css
@@ -32,3 +32,20 @@
   background: url("../img/Email.svg") no-repeat;
   padding-left: 2em;
 }
+@media screen and (min-width: 1024px){
+  .contato{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .contato__titulo{
+    font-size:1.5rem;
+  }
+  .contato__descrição{
+    margin-right: 2em;
+    width: 30%; /*quebra de linha*/
+  }
+  .contato__email{
+    width: 30%;
+  }
+}
