--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -5,3 +5,34 @@ hr{
   background-color: var(--branco);
   padding: 1em;
 }
+.lista-rodape{
+  display: none;
+}
+@media screen and (min-width:1024px){
+  .rodape{
+    display: flex;
+    justify-content: space-around;
+  }  
+  .lista-rodape__item{
+    display: flex;
+    align-items: center;
+    margin: 1em 0;
+  }
+  .lista-rodape_link{
+    text-decoration: none;
+    color: var(--cinza);
+    margin-left: 0.6em;;
+    font-size: 0.9rem;
+  }
+  .lista-rodape__titulo{
+    color: var(--cinza-titulo);
+    font-size: 0.9rem;
+    text-transform: uppercase;
+  }
+  .rodape__titulo{
+    font-size: 1.5rem;
+  }
+  .lista-rodape{
+    display: block;
+  }
+}
