--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -24,3 +24,16 @@
 .topicos__item{
   margin: 2em 0.5em;
 }
+@media  screen and (min-width:1024px) {
+  .topicos__titulo{
+    font-size: 1.5rem;
+  }
+  .topicos__link{
+    font-size: 1.5rem;
+  }
+  .topicos__lista{
+    margin: 2em 9em;
+  }
+ 
+  
+}
