feat :  media queries 1728px

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -42,3 +42,14 @@
     font-size: 1rem;
   }
 }
+@media screen and (min-width: 1728px){
+  .banner__pesquisa{
+    width: 35%;
+  }
+  .banner__pesquisa::placeholder{
+    background-position: 8em;
+  }
+  .banner{
+    padding: 6em 0;
+  }
+}
