--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -84,5 +84,30 @@
     /* Defina o espaçamento horizontal entre os cards */
     margin-left: -10px;
   }
-
+}
+@media screen and (min-width:1728px) {
+  .carrossel__container{
+    display: flex;
+    margin: 0 20vw 3em 20vw;
+    align-items: center;
+  }
+  .swiper-pagination{
+    margin: 1em 0;
+  }
+  .swiper{
+    width: 50%;
+  }
+  .descrição__titulo{
+    font-size: 2rem;
+  }
+  .descrição__titulo-texto{
+    font-size: 1rem;
+  }
+  .descrição{
+    margin-right: 1em;
+  }
+  .card{
+    width: 60%;
+    margin-left: 3em;
+  }
 }
