--- a/styles/contato.css
+++ b/styles/contato.css
@@ -49,3 +49,8 @@
     width: 30%;
   }
 }
+@media screen and (min-width: 1728px){
+  .contato{
+     padding: 3em 10vw;  /*ocupar 10% de cada lado da pagina*/
+  }
+}
