--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -60,6 +60,9 @@
   font-weight: 700;
   text-decoration: none;
 }
+.botoes__ancora:active{
+  background-color: var(--azul);
+}
 
 @media screen and (min-width:1024px) {
   .carrossel__titulo{
