--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -35,6 +35,9 @@ hr{
   .lista-rodape{
     display: block;
   }
+  .lista-rodape_link:hover{
+    color: var(--laranja);
+  }
 }
 @media screen and (min-width: 1728px){
   .lista-rodape{
